Update bundles/org.openhab.binding.sensibo/src/main/java/org/openhab/binding/sensibo/internal/CallbackChannelsTypeProvider.java
Co-authored-by: Jacob Laursen <jacob-github@vindvejr.dk>
Signed-off-by: Arne Seime <seime@users.noreply.github.com>